--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: R4dfp
-Version: 0.1-0
-Date: 2010-06-18
+Version: 0.1-5
+Date: 2010-06-21
+OS_type: unix
 Title: 4dfp MRI Image Read and Write Routines
-Author: Kevin Barry <ta0kira@users.berlios.de> with contributions from
-        Avi Z. Snyder <avi@npg.wustl.edu>
-Maintainer: Kevin Barry <ta0kira@users.berlios.de>
+Author: Kevin P. Barry <ta0kira@users.berlios.de> with contributions
+        from Avi Z. Snyder <avi@npg.wustl.edu>
+Maintainer: Kevin P. Barry <ta0kira@users.berlios.de>
 Description: This package provides an R interface with 2-part 4dfp MRI
         images (.4dfp.ifh and .4dfp.img files.)
 License: BSD
-Packaged: 2010-06-21 04:38:56 UTC; ta0kira
+Packaged: Mon Jun 21 14:32:42 2010; kpb14
 Repository: CRAN
-Date/Publication: 2010-06-21 08:03:49
+Date/Publication: 2010-06-22 08:29:10
